--- a/app/src/main/res/layout-land/activity_main2.xml
+++ b/app/src/main/res/layout-land/activity_main2.xml
@@ -19,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Close Activity"
+            android:backgroundTint="#E1CEFF"
             tools:layout_editor_absoluteX="317dp"
             tools:layout_editor_absoluteY="0dp" />
 
